LIMA-104 : Fix alignement in player-summary.html player stats main part

--- a/compiled/css/style.css
+++ b/compiled/css/style.css
@@ -16279,11 +16279,13 @@ table.squad-listing.avatars tbody tr td.player {
 .player-statistics .statistics h2.result,
 .player-statistics .statistics .result {
   font-size: 29px;
-  display: inline-block;
   font-weight: 300;
-  margin-top: 18px;
-  margin-bottom: 9px;
   line-height: 1.1;
+  text-align: right;
+  display: inline-block;
+  width: 100%;
+  margin-top: 18px;
+  margin-bottom: 18px;
 }
 .player-statistics .statistics h2.result.football-field,
 .player-statistics .statistics .result.football-field {
