--- a/compiled/css/style_split_2.css
+++ b/compiled/css/style_split_2.css
@@ -4787,11 +4787,13 @@ table.squad-listing.avatars tbody tr td.player {
 .player-statistics .statistics h2.result,
 .player-statistics .statistics .result {
   font-size: 29px;
-  display: inline-block;
   font-weight: 300;
-  margin-top: 18px;
-  margin-bottom: 9px;
   line-height: 1.1;
+  text-align: right;
+  display: inline-block;
+  width: 100%;
+  margin-top: 18px;
+  margin-bottom: 18px;
 }
 
 .player-statistics .statistics h2.result.football-field,
