--- a/src/css/less/livescore/rules/player-summary/player-summary-general.less
+++ b/src/css/less/livescore/rules/player-summary/player-summary-general.less
@@ -115,11 +115,14 @@
       
         h2.result, .result{
           font-size: 29px;
-          display: inline-block;
           font-weight: @font-weight-light;
-          margin-top: 18px;
-          margin-bottom: 9px;
           line-height: 1.1;
+          text-align: right;
+          display: inline-block;
+          width: 100%;
+          margin-top: 18px;
+          margin-bottom: 18px;
+
           
           &.football-field{
             padding-left: 25px;
